<resources>
    <string name="app_name">Zinc</string>
    <string name="action_search_text">ページ内検索</string>
    <string name="action_bookmark_add_text">ブックマークの登録</string>
    <string name="action_bookmark_manager_text">ブックマークの管理</string>
    <string name="action_history_text">履歴</string>
    <string name="action_download_text">ダウンロード</string>
    <string name="action_newtab_add_text">新しいタブ</string>
    <string name="action_currenttab_delete_text">このタブを削除</string>
    <string name="action_show_pcsite_text">PCサイトの表示</string>
    <string name="action_make_shortcut_text">ショートカットの作成</string>
    <string name="action_show_source_text">ソースの表示</string>
    <string name="activity_bookmark_title_text">ブックマーク</string>
    <string name="activity_history_title_text">履歴</string>
    <string name="bookmark_status_text">ブックマークはありません</string>
    <string name="history_status_text">履歴はありません</string>
    <string name="label_text_name_text">ページタイトル</string>
    <string name="label_text_url_text">URL</string>
    <string name="button1_text"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
