<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search" android:title="@string/action_search_text"
        android:orderInCategory="101" app:showAsAction="always|collapseActionView"
        android:icon="@android:drawable/ic_menu_search" app:actionViewClass="android.support.v7.widget.SearchView" />
    <item android:id="@+id/action_bookmark_add" android:title="@string/action_bookmark_add_text"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_bookmark_manager" android:title="@string/action_bookmark_manager_text"
        android:orderInCategory="103" app:showAsAction="never" />
    <item android:id="@+id/action_history" android:title="@string/action_history_text"
        android:orderInCategory="104" app:showAsAction="never" />
    <item android:id="@+id/action_download" android:title="@string/action_download_text"
        android:orderInCategory="105" app:showAsAction="never" />
    <item android:id="@+id/action_newtab_add" android:title="@string/action_newtab_add_text"
        android:orderInCategory="106" app:showAsAction="never" />
    <item android:id="@+id/action_currenttab_delete" android:title="@string/action_currenttab_delete_text"
        android:orderInCategory="107" app:showAsAction="never" />
    <item android:id="@+id/action_show_pcsite" android:title="@string/action_show_pcsite_text"
        android:orderInCategory="108" app:showAsAction="never" />
    <item android:id="@+id/action_make_shortcut" android:title="@string/action_make_shortcut_text"
        android:orderInCategory="109" app:showAsAction="never" />
    <item android:id="@+id/action_show_source" android:title="@string/action_show_source_text"
        android:orderInCategory="110" app:showAsAction="never" />
</menu>